apps/jjinbbang-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jjinbbang-api
  labels:
    app.kubernetes.io/name: jjinbbang-api
    app.kubernetes.io/instance: jjinbbang-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jjinbbang-api
    app.kubernetes.io/instance: jjinbbang-api
  ports:
    - name: http
      port: 8080
      targetPort: http
